--- a/CLI/Local-CLI/local-cli-fe-full/src/styles/Monitor.css
+++ b/CLI/Local-CLI/local-cli-fe-full/src/styles/Monitor.css
@@ -1,9 +1,19 @@
-.monitor-container {
-    max-width: 600px;
+/* .monitor-container {
+    max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
     background-color: #fff;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  } */
+
+
+  .monitor-container {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    margin: 20px;
+    border: 1px solid #ddd;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
